--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
 } 
 
 .container-1__searchbar__button {
-    background-color: aqua;
+    background-color: #84E9BD;
     border: none;
     border-radius: 50px;
     width: 70px;
@@ -129,16 +129,37 @@ body {
     margin-right: 10px;
 }
 
-.container-2 {
-    display: block;
+.container-1__img--img {
+    position: relative;
+    margin-top: 50px;
+    color: white;
+    font-size: 30px;
 }
 
-.container-2__img {
-    margin-top: 20px;
+.container-1__img--dis
+{
+    position: absolute;
+    bottom: 100px;
+    left: 30px;
+}
+
+.container-1__img--dis button{
+    background-color: white;
+    color: black;
     border: none;
-   
+    border-radius: 20px;
+    height: 50px;
+    width: 100px;
+    font-size: 15px;
 }
 
-.container-2__img img {
-    border-radius: 30px;
+.container-1__img img {
+    border: none;
+    border-radius: 40px;
+    width: 100%;
+    height: 600px;
 }
+
+
+
+/* Container-2 */
